# image-processing

3C/: PNMreader.C  a.out  filter.C  filter.h  image.C  image.h  main3C.C  readme.md  sink.C  source.h
3E/: CMakeLists.txt  Makefile  PNMreader.C  PNMreader.h  PNMwriter.C  PNMwriter.h  a.out  filter.C  filter.h  image.C  image.h  main3E.C  pixel.h  readme.md  sink.C  sink.h  source.C  source.h
3E/a.out.dSYM/Contents/Resources/DWARF/: a.out
3Eultimate/: 3Eultimate  CMakeLists.txt  Makefile  PNMreader.cpp  PNMreader.h  PNMwriter.cpp  filter.cpp  filter.h  howtodebug.txt  image.h  main3E.cpp  sink.cpp  sink.h  source.cpp  source.h
3F/: 3Eultimate  CMakeLists.txt  Makefile  Mamtaj_logger  PNMreader.h  filter.cpp  filter.h  image.cpp  logging.cpp  logging.h  main3F.cpp  proj3F  source.cpp
3H/sandbox/: Mamtaj_logger  PNMreader.C  PNMwriter.C  PNMwriter.h  filter.C  filter.h  image.C  logging.C  logging.h  main3G.C  sink.C  sink.h  source.C  source.h  stress_test
3a/: 3A_c.c  readme.md
3b/: functions.C  functions.h  image.C  image.h  img5.pnm  img6.pnm  main3B.C  pixel.h  proj3B  readme.md
4B/: PNMreader.C  PNMwriter.C  filter.C  image.C  proj3E  readme.md
proj3G/: CMakeLists.txt  Makefile  PNMreader.cpp  PNMwriter.cpp  PNMwriter.h  filter.cpp  filter.h  image.cpp  image.h  logging.cpp  logging.h  main3G.cpp  proj3G  source.h
proj3H/: Makefile  Mamtaj_logger  filter.C  filter.h  image.C  proj3G
sandbox/: CMakeLists.txt  Mamtaj_logger  PNMreader.C  PNMreader.h  filter.C  filter.h  image.C  image.h  proj3G_checksum  source.C  stress_test
(+13 files in other folders)
